# reaterra

./: CMakeLists.txt  README.md  path_to_toolchain.cmake  raspberry.cmake
.gitlab/issue_templates/: Bug.md  Discussion.md  FeatureRequest.md  Task.md
docs/: reaterra установка с нуля.docx  Руководство программиста Reaterra.docx  Список классов ПО Reaterra.docx
files/: ext_backup.sh  ext_restore.sh  post_update.sh  pre_update.sh  reaterra_db_backup.sql  reaterra_locale_EN.txt  reaterra_start.sh
files/others/: 8192eu.ko  RT2870AP.txt  goodix_5d-overlay.dtb  mt7601Uap.ko
files/scripts/: backup_key.txt  set_bluetooth.sh  set_id.sh  set_wifi.sh  start_backup.sh  start_restore.sh  start_update.sh  usb_check.sh  usb_commands.sh  utils.sh
modbus/: .cproject  .project
modbus/src/: modbus-private.h  modbus-rtu-private.h  modbus-rtu.c  modbus-rtu.h  modbus-version.h  modbus.c  modbus.h
reaterra/: .cproject  .project  reaterra.Doxyfile
reaterra/src/: BluetoothInterface.cpp  BluetoothInterface.h  Context.cpp  Context.h  DbConnector.cpp  DbConnector.h  DeviceMonitor.cpp  DeviceMonitor.h  DisplayLightnessPwm.cpp  DisplayLightnessPwm.h  EnumExtension.h  Event.cpp  Event.h  FreeRunMenu.cpp  FreeRunMenu.h  FreeRunMenuSas.cpp  FreeRunMenuSas.h  GpioDriver.cpp  GpioDriver.h  GraphicEngine.cpp  GraphicEngine.h  HrMonitor.cpp  HrMonitor.h  KbdEvent.cpp  KbdEvent.h  KeyboardButton.cpp  KeyboardButton.h  Locale.cpp  Locale.h  Logger.cpp  Logger.h  MainLoop.cpp  MainLoop.h  MainMenu.cpp  MainMenu.h  Menu.cpp  Menu.h  MenuEvent.cpp  MenuEvent.h  ModalAuthAdmin.cpp  (+145 more)
(+19 files in other folders)
